<resources>
    <string name="app_name">FirebaseS9</string>
    <string name="email">Ingrese Email</string>
    <string name="contra">Ingrese Contraseña</string>
    <string name="log">Log in</string>
    <string name="btnre">REGISTER</string>
    <string name="ptFullname">Full Name</string>
    <string name="country">Country</string>
    <string name="emailregister">Email</string>
    <string name="passregister">Password</string>
    <string name="guardarregs">Save</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_product">Product</string>
    <string name="menu_register">Register</string>
    <string name="menu_animals">Animals</string>
    <string name="menu_product_api">Product API</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valtitlesearchproducts">Buscar productos</string>
    <string name="asd">Producto...</string>
    <string name="rgtpro">REGISTRO DE PRODUCTO</string>
    <string name="agregPrd">Agregar Producto</string>
</resources>